[package]
name = "gitc"
version = "0.1.1"
edition = "2021"
description = "A command line tool to help you clone git repositories with http url or even with branch."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.7"
regex = "1.10.2"
